@@ -14,6 +14,12 @@
 
 #define POWER_TIMEOUT 200
 
+#ifdef __powerpc__
+# define SYSFS_POWER_AC_STATE  "/sys/class/power_supply/pmu-ac/online"
+#else
+# define SYSFS_POWER_AC_STATE  "/sys/class/power_supply/ADP1/online"
+#endif
+
 
 void
 power_init(void);
