@@ -8,6 +8,8 @@ version 1.22:
 	code in the kbd_{lmu,pmu}_backlight_set() routines.
 	- gpomme: add japanese translation for gpomme, courtesy of
 	Nobuhiro Iwamatsu <iwamatsu@nigauri.org>.
+	- pommed: use a common sysfs power class routine in power.c, add
+	sysfs power class support for pmac machines.
 
 version 1.21:
 	- gpomme: use compositing if available, patch by Soeren Sonnenburg.
